--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,4 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 @font-face {
@@ -40,6 +41,9 @@ body{
   box-sizing:border-box;
   font-family: 'Graphik';
   overflow-x: hidden;
+}
+.b{
+  border:1px solid red
 }
 body::-webkit-scrollbar {
   width: .5em;
@@ -7847,4 +7851,9 @@ table tbody tr td:nth-child(2) {
 }
 .teamList .title{
   font-size: 20px;
+}
+
+/* new css */
+.modal-backdrop{
+  z-index: -1;
 }
