--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/* @import "~bootstrap/dist/css/bootstrap.min.css"; */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 @font-face {
@@ -1594,7 +1594,7 @@ section{
   font-size: 12px;
 }
 .rightFooterBottom ul li a:hover{
-  text-decoration: underline !important;
+  text-decoration: underline;
   color: var(--light-blue-color);
 }
 .itemFooterLogo img{
@@ -1722,7 +1722,7 @@ section{
   color: #fff;
 }
 .officeAddress a:hover{
-  text-decoration: underline !important;
+  text-decoration: underline;
 }
 .leftImgMap:hover .officeAddress{
   background: rgba(0, 0, 0, 0.6);
