--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7969,5 +7969,16 @@ table tbody tr td:nth-child(2) {
 /* WebsiteDesignServices */
 
 .WebsiteDesignServices:nth-child(odd) {
-  margin-top: 30px;
+  @media (min-width: 1024px) {
+    margin-top: 30px;
+  }
 }
+.WebsiteDesignServices {
+  border: 2px solide red;
+  gap: 20px !important;
+  /* background-color: var(--red-color); */
+}
+.font-sm{
+  font-size: 12px;
+}
+
