--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1701,6 +1701,7 @@ section {
   transition: all 0.5s ease-in-out;
 }
 .leftImgMap {
+  overflow: hidden !important;
   width: 45%;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
