--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7395,11 +7395,11 @@ table tbody tr td:nth-child(2) {
   height: 80px;
   border-radius: 5px;
 }
-/* .toolsLogo img {
+.toolsLogo img {
   max-width: 100%;
   transition: all 0.3s ease-in-out;
   max-height: 100%;
-} */
+}
 .toolsLogo:hover {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   border-color: var(--light-blue-color);
