final confilicts resolved

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7971,11 +7971,15 @@ table tbody tr td:nth-child(2) {
 
 /* WebsiteDesignServices */
 
-/* .WebsiteDesignServices:nth-child(odd) {
+.WebsiteDesignServices:nth-child(odd) {
   @media (min-width: 1024px) {
     margin-top: 30px;
   }
-} */
+}
+.WebsiteDesignServices {
+  gap: 20px !important;
+  
+} 
 
 
 .IntroImage{
@@ -7993,11 +7997,7 @@ table tbody tr td:nth-child(2) {
   }
 }
 
-.WebsiteDesignServices {
-  border: 2px solide red;
-  gap: 20px !important;
-  /* background-color: var(--red-color); */
-} 
+
 
 /* digital marketing page */
 .we_offer {
