--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8007,3 +8007,49 @@ table tbody tr td:nth-child(2) {
 .faqsWebdesigning {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+
+/* footer  */
+.footer_social_main {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: 0;
+  @media (max-width: 992px) {
+    margin: 0 auto;
+  }
+}
+
+.footer_social {
+  margin-bottom: 10px;
+  display: flex;
+  gap: 10px;
+  & li {
+    border: 1px solid #333;
+    width: fit-content;
+    min-width: 35px;
+    min-height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    & a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: fit-content;
+      height: fit-content;
+      margin: 0 !important;
+      padding: 0 !important;
+      & i {
+        color: #333;
+      }
+    }
+    &:hover {
+      border: 1px solid var(--light-blue-color);
+      & a {
+        & i {
+          color: var(--light-blue-color);
+        }
+      }
+    }
+  }
+}
