--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8210,6 +8210,13 @@ table tbody tr td:nth-child(2) {
     gap: 0;
   }
 }
+.seo_result_left_inner .items1 {
+min-height: 200px;
+}
+.seo_result_left_inner .items1 img{
+  width: 100%;
+  height: 100%;
+}
 
 .seo_result {
   @media (max-width: 1024px) {
@@ -8231,30 +8238,7 @@ table tbody tr td:nth-child(2) {
   }
 
   .items1 {
-    /* padding: 20px; */
-    overflow: hidden;
     width: 70%;
-    border: 2px solid #d6d6d6;
-    border-radius: 13px;
-
-    gap: 20px;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    img {
-      @media (max-width: 640px) {
-        width: 100px !important;
-      }
-    }
-    @media (max-width: 640px) {
-      width: 100%;
-    }
-    .content {
-      width: fit-content;
-      p {
-        font-weight: 600;
-      }
-    }
   }
   .items2_main {
     width: 30%;
@@ -8271,6 +8255,25 @@ table tbody tr td:nth-child(2) {
     gap: 10px;
   }
 }
+.seo_result_right .items{
+padding: 20px;
+}
+/* ******************************* */
+.seo_result_right2 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 30px;
+  @media (max-width: 1024px) {
+    width: 100%;
+    gap: 10px;
+  }
+}
+.seo_result_right2 .items{
+padding: 20px;
+}
+
+/* ******************************* */
 
 .bmc {
   height: 200px;
@@ -8345,4 +8348,25 @@ table tbody tr td:nth-child(2) {
 }
 .strategy_grid .items.odd {
   flex-direction: row-reverse;
+}
+
+
+/* slide_card */
+.slide_card .slide_card_img{
+border-radius: 13px ;
+border:1px solid #b1cce5;
+overflow: hidden;
+/* min-height: 300px; */
+}
+.slide_card .slide_card_img img{
+height: 300px !important;
+}
+.slide_card .slide_card_content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+.slide_card .slide_card_content:last-child{
+  font-weight: 700;
 }
