--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8140,6 +8140,7 @@ table tbody tr td:nth-child(2) {
   background-color: #eee;
   .servicesLogomain_inner {
     display: flex;
+    align-items: center;
     @media (max-width: 768px) {
       flex-direction: column-reverse;
     }
@@ -8167,6 +8168,7 @@ table tbody tr td:nth-child(2) {
   }
   @media (max-width: 640px) {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 10px;
   }
 
   p {
@@ -8175,9 +8177,15 @@ table tbody tr td:nth-child(2) {
     font-weight: 700;
   }
   img {
+    width: 80%;
+    height: auto !important;
+    aspect-ratio: 2/2;
+    object-position: contain;
     display: block;
     margin: 0 auto;
-    /* filter: invert(40%); */
+    @media (max-width: 767px) {
+      width: 30%;
+    }
   }
 }
 
@@ -8211,9 +8219,9 @@ table tbody tr td:nth-child(2) {
   }
 }
 .seo_result_left_inner .items1 {
-min-height: 200px;
+  min-height: 200px;
 }
-.seo_result_left_inner .items1 img{
+.seo_result_left_inner .items1 img {
   width: 100%;
   height: 100%;
 }
@@ -8255,8 +8263,8 @@ min-height: 200px;
     gap: 10px;
   }
 }
-.seo_result_right .items{
-padding: 20px;
+.seo_result_right .items {
+  padding: 20px;
 }
 /* ******************************* */
 .seo_result_right2 {
@@ -8267,10 +8275,16 @@ padding: 20px;
   @media (max-width: 1024px) {
     width: 100%;
     gap: 10px;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  @media (max-width: 767px) {
+    width: 100%;
+    gap: 10px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
-.seo_result_right2 .items{
-padding: 20px;
+.seo_result_right2 .items {
+  padding: 20px;
 }
 
 /* ******************************* */
@@ -8337,36 +8351,55 @@ padding: 20px;
   display: block;
   margin: auto;
 }
+.strategy_grid .items{
+gap: 20px !important;
+}
 
 .strategy_grid {
   display: grid;
-  gap: 20px;
+  gap: 20px !important;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+  @media (max-width:767px) {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 .strategy_grid .items.odd .item_content {
-  text-align: right;
+  @media (min-width:767px) {
+  text-align: right;}
 }
 .strategy_grid .items.odd {
-  flex-direction: row-reverse;
+  @media (min-width:767px) {
+    flex-direction: row-reverse;
+  }
+  
 }
-
 
 /* slide_card */
-.slide_card .slide_card_img{
-border-radius: 13px ;
-border:1px solid #b1cce5;
-overflow: hidden;
-/* min-height: 300px; */
+.slide_card .slide_card_img {
+  border-radius: 13px;
+  border: 1px solid #b1cce5;
+  overflow: hidden;
+  /* min-height: 300px; */
 }
-.slide_card .slide_card_img img{
-height: 300px !important;
+.slide_card .slide_card_img img {
+  height: 300px !important;
+  @media (max-width: 768px) {
+    height: 200px !important;
+  }
 }
-.slide_card .slide_card_content{
+.slide_card .slide_card_content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
 }
-.slide_card .slide_card_content:last-child{
+.slide_card .slide_card_content:last-child {
   font-weight: 700;
+}
+
+.bg_red {
+  background-color: var(--red-color) !important;
+}
+.bg_sky{
+  background-color: #3498db !important;
 }
