--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8191,7 +8191,7 @@ table tbody tr td:nth-child(2) {
 
 .introduction_seo_list {
   gap: 20px;
-  padding-left: 50px;
+  padding-left: 20px;
 
   @media (max-width: 1024px) {
     padding-left: 0px;
@@ -8405,5 +8405,11 @@ gap: 20px !important;
   background-color: var(--red-color) !important;
 }
 .bg_sky{
-  background-color: #3498db !important;
+  background-color: var(--light-blue-color) !important;
+}
+.nolock-img{
+  filter:brightness(0) invert(1)
+}
+.audit_contact p{
+  font-size: 14px;
 }
