--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); */
 /* @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"); */
-
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* @font-face {
   font-family: "Graphik";
@@ -167,12 +167,12 @@ section {
   font-weight: 900;
 }
 .fontHeading {
-  font-family: "Lora", serif;
+   font-family: "Inter Tight", sans-serif;
 }
 
-.topHeader {
+/* .topHeader {
   background: #000;
-}
+} */
 .inlineHeader {
   display: flex;
   align-items: center;
@@ -194,15 +194,18 @@ section {
 }
 .topHeaderRight ul {
   display: flex;
+  gap: 25px;
   align-items: center;
 }
 .topHeaderRight ul li {
   border-radius: 3px;
+  /* border: 1px solid red; */
 }
 .topHeaderRight ul li a {
+
   display: inline-block;
   font-size: 12px;
-  color: #fff;
+  color: #ffffff;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -224,24 +227,88 @@ section {
     opacity: 0;
   }
 }
+
 .topHeaderRight ul li:first-child {
   background: var(--red-color);
+  color: #fff !important;
+
 }
-.mainHeader {
-  padding: 10px 0;
+.topHeaderRight ul li:first-child a {
+font-size: 13px;
+padding: 10px 15px;
+text-transform: capitalize;
+}
+.topHeaderRight ul li:nth-child(2) .menu_contact {
+display: flex;
+align-items: center;
+color: #000000;
+gap: 10px !important;
+padding: 2px 15px;
+}
+.menu_contact_inner a{
+display: flex !important;
+}
+.topHeaderRight ul li:nth-child(2) .menu_contact i{
+font-size: 30px;
+}
+.number_phone{
+  font-size: 25px !important;
+  font-weight: 800;
+  line-height: 28px;
+  letter-spacing:1.5px !important;
+  /* border: 1px solid red; */
+}
+.header_email{
+  font-size: 10px;
+  text-transform: lowercase !important;
+  padding-left: 20px;
+  line-height: 18px;
+}
+.topHeaderRight ul li:first-child .menu_contact {
+color: #fff;
+padding: 12px 15px;
+font-size: 12px;
+}
+
+.rightMenu .topHeaderRightMain{
+  gap: 20px;
+}
+.menubtn{
+  font-size: 30px;
+  border:0;
+  color: var(--light-blue-color);
+  background-color:transparent !important;
+}
+.menubtn:hover{
+  color: rgb(0, 0, 0);
 }
 .rightMenu ul {
   display: flex;
   position: relative;
 }
 .rightMenu ul li a {
-  color: #000;
+  color: #000000;
   display: inline-block;
   font-size: 16px;
-  padding: 17px 15px;
+  padding: 17px 10px;
   font-weight: 700;
-  /* font-family: ; */
-  font-family: "Lora", serif;
+  /* border: 1px solid red; */
+
+   font-family: "Inter Tight", sans-serif;
+}
+.header.stricky-fixed .topHeaderRightMain{
+  display: none !important;
+}
+.header.stricky-fixed{
+  padding: 10px 0;
+}
+.header.stricky-fixed .leftLogo img{
+  width:200px !important;
+  height: auto !important;
+
+}
+.header.stricky-fixed .extraMenu{
+  display: block !important;
 }
 .extraMenu {
   width: 40px;
@@ -516,9 +583,9 @@ section {
     margin-top: 0;
   }
 }
-.stricky-fixed .topHeader {
+/* .stricky-fixed .topHeader {
   display: none !important;
-}
+} */
 .text_light_blue {
   color: var(--light-blue-color);
 }
@@ -964,7 +1031,7 @@ section {
   width: 100%;
 }
 .marketingTabs ul li {
-  font-family: "Lora", serif;
+   font-family: "Inter Tight", sans-serif;
   padding: 8px 10px;
   cursor: pointer;
   position: relative;
@@ -2269,7 +2336,7 @@ section {
   border: none;
 }
 .customHeading {
-  font-family: "Lora", serif;
+   font-family: "Inter Tight", sans-serif;
   font-size: 26px;
   line-height: 30px;
   margin-bottom: 20px;
@@ -8205,7 +8272,7 @@ table tbody tr td:nth-child(2) {
     /* border: 1px solid red; */
 
     h4 {
-      font-family: "Lora", serif;
+       font-family: "Inter Tight", sans-serif;
       font-weight: 600;
       font-size: 24px;
     }
@@ -8397,11 +8464,30 @@ gap: 20px !important;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px 0;
 }
-.slide_card .slide_card_content:last-child {
-  font-weight: 700;
+.slide_card .slide_card_content h4 {
+ font-size: 45px;
+ color: var(--red-color);
+ @media (max-width:767px) {
+  font-size: 25px;
+  
+ }
 }
+.slide_card .slide_card_content p{
+  @media (max-width:767px) {
+    font-size: 12px;
+   }
+}
+.increments{
+  padding:10px 20px;
+  border-radius: 10px;
+  background-color:#f8f8f8;
+  box-shadow:0 0 1px 1px #e9e9e9;
+  margin-right: 1px;
+  /* box-shadow:  6px 6px 0px 0 rgba(0, 0, 0, 0.02) */
+}
+
 
 .bg_red {
   background-color: var(--red-color) !important;
@@ -8447,7 +8533,7 @@ background-color: #000 !important;
 }
 
 .content-marketing-box2-content-box h4,.graphic-services-box h4,.adv-resp-box h4,.responsive-box-2 h4,.itemInduster h5 ,.itemDigital h5 ,.wordpresItem h4,.web-devlp-box h4,.front-end-box h4,.web-devlp-box-2 h4,.devlp-inner-box h4,.sd-benefit-box h5,.help-inner-box H4{
-  font-family: "Lora", serif;
+   font-family: "Inter Tight", sans-serif;
 }
 
 .mainFaq{
@@ -8469,6 +8555,13 @@ font-size: 24px;
 cursor: pointer;
 color: #333;
 font-weight: 600;
+}
+.customFaq h4 img{
+  margin-right: 8px  ;
+  @media (max-width:767px) {
+    margin-right: 5px  ; 
+    
+  }
 }
 .customFaq h4 span{
 
@@ -8504,4 +8597,12 @@ position: relative;
   font-family: "Font Awesome 6 Free";
   font-weight: 700;
   font-size: 13px;
+}
+.slide_card_content_inner{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.extraMenuItems ul li a{
+  font-family: "Inter Tight", sans-serif !important;
 }
