--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -252,7 +252,7 @@ display: flex !important;
 font-size: 30px;
 }
 .number_phone{
-  font-size: 25px !important;
+  font-size: 24px !important;
   font-weight: 800;
   line-height: 28px;
   letter-spacing:1.5px !important;
@@ -1584,6 +1584,7 @@ font-size: 12px;
   color: #ccc;
   font-size: 20px;
   margin-bottom: 20px;
+  font-weight: 800;
 }
 .footerColumn ul li a {
   font-size: 13px;
@@ -2397,6 +2398,9 @@ font-size: 12px;
   align-items: center;
   justify-content: space-between;
 }
+.web-devlp-box-2 h4{
+  font-weight: 600;
+}
 .front-end-img-circle {
   width: 50px;
   height: 50px;
@@ -2414,6 +2418,7 @@ font-size: 12px;
 .front-end-box-heading h4 {
   width: calc(100% - 60px);
   font-size: 18px;
+  font-weight: 700;
 }
 .section-4 {
   background-image: linear-gradient(to right, #35c6e3, var(--light-blue-color));
@@ -3447,6 +3452,7 @@ font-size: 12px;
 .devlp-inner-box h4 {
   margin-bottom: 20px;
   font-size: 20px;
+  font-weight: 700;
 }
 
 .devlp-inner-box a {
@@ -3540,6 +3546,7 @@ font-size: 12px;
 }
 .offering-heading h4 {
   font-size: 17px;
+  font-weight: 700;
 }
 .help-inner-box ul li img {
   width: 20px;
@@ -3658,6 +3665,7 @@ font-size: 12px;
 }
 .graphic-services-box h4 {
   font-size: 18px;
+  font-weight: 700;
 }
 .graphic-services-box p {
   margin-top: 20px;
@@ -3698,6 +3706,7 @@ font-size: 12px;
 }
 .graphic-other-services-box h5 {
   font-size: 17px;
+  font-weight: 700;
 }
 .graphic-help-left ul li {
   display: flex;
@@ -3914,6 +3923,7 @@ h1 {
   margin-bottom: 20px;
   font-size: 22px;
   margin-top: 6px;
+  font-weight: 700;
 }
 .responsive-box-2:hover {
   background-color: var(--light-blue-color);
@@ -4013,6 +4023,7 @@ h1 {
   margin: 20px 0 15px;
   font-size: 16px;
   color: var(--dark-blue-color);
+  font-weight: 600;
 }
 .customLineHeight2 {
 
@@ -4254,6 +4265,7 @@ h1 {
 }
 .linkedin-box h4 {
   font-size: 18px;
+  font-weight: 700;
 }
 .facebook-ads-benefit-box {
   padding: 30px;
@@ -4441,6 +4453,9 @@ h1 {
   padding: 10px;
   width: 100%;
 }
+.services-box h4{
+  font-weight: 700;
+}
 .icon-circle {
   width: 60px;
   height: 60px;
@@ -4545,6 +4560,7 @@ h1 {
 }
 .optmize-box h4 {
   font-size: 21px;
+  font-weight: 600;
 }
 .off-page-seo-box {
   height: 400px;
@@ -4561,6 +4577,8 @@ h1 {
 }
 .off-page-seo-box-heading h4 {
   width: calc(100% - 84px);
+  font-weight: 700;
+  /* border: 1px solid red; */
 }
 .action-btn {
   background-color: #fff;
@@ -4789,6 +4807,7 @@ h1 {
 }
 .content-marketing-box h4 {
   margin-bottom: 20px;
+  font-weight: 700;
 }
 .content-marketing-box2 ul li {
   position: relative;
@@ -4873,6 +4892,7 @@ h1 {
 }
 .blog-box h4 {
   margin-bottom: 20px;
+  font-weight: 600;
 }
 .influencer-marketing-list li {
   position: relative;
@@ -8272,8 +8292,8 @@ table tbody tr td:nth-child(2) {
     /* border: 1px solid red; */
 
     h4 {
-       font-family: "Inter Tight", sans-serif;
-      font-weight: 600;
+      
+    
       font-size: 24px;
     }
   }
@@ -8432,14 +8452,14 @@ gap: 20px !important;
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
-.strategy_grid .items.odd .item_content {
+/* .strategy_grid .items.odd .item_content {
 
   text-align: right;
   @media (max-width:767px) {
     text-align: left !important;
   }
 
-}
+} */
 .strategy_grid .items.odd {
   @media (min-width:767px) {
     flex-direction: row-reverse;
@@ -8485,6 +8505,7 @@ gap: 20px !important;
   background-color:#f8f8f8;
   box-shadow:0 0 1px 1px #e9e9e9;
   margin-right: 1px;
+  font-weight: 700;
   /* box-shadow:  6px 6px 0px 0 rgba(0, 0, 0, 0.02) */
 }
 
@@ -8534,6 +8555,9 @@ background-color: #000 !important;
 
 .content-marketing-box2-content-box h4,.graphic-services-box h4,.adv-resp-box h4,.responsive-box-2 h4,.itemInduster h5 ,.itemDigital h5 ,.wordpresItem h4,.web-devlp-box h4,.front-end-box h4,.web-devlp-box-2 h4,.devlp-inner-box h4,.sd-benefit-box h5,.help-inner-box H4{
    font-family: "Inter Tight", sans-serif;
+}
+.content-marketing-box2-content-box h4{
+font-weight: 700;
 }
 
 .mainFaq{
