--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -255,14 +255,15 @@ font-size: 30px;
   font-size: 24px !important;
   font-weight: 800;
   line-height: 28px;
-  letter-spacing:1.5px !important;
+  letter-spacing:3px !important;
   /* border: 1px solid red; */
 }
 .header_email{
   font-size: 10px;
   text-transform: lowercase !important;
   padding-left: 20px;
-  line-height: 18px;
+  font-weight: 300 !important;
+  line-height: 13px;
 }
 .topHeaderRight ul li:first-child .menu_contact {
 color: #fff;
