--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5125,7 +5125,7 @@ h1 {
   font-family: galano, sans-serif;
   color: #fff;
   letter-spacing: 1px;
-  padding: 5px 18px 10px 18px;
+  padding: 10px 18px 10px 18px;
   transition: all 0.5s;
 }
 .package-btn:hover {
@@ -8399,8 +8399,12 @@ gap: 20px !important;
   justify-content: space-between;
   padding: 20px;
 }
-.slide_card .slide_card_content:last-child {
-  font-weight: 700;
+.slide_card .slide_card_content h4 {
+  font-size: 30px;
+}
+.slide_card .slide_card_content p {
+ font-size: 14px;
+ text-align: center;
 }
 
 .bg_red {
@@ -8504,4 +8508,9 @@ position: relative;
   font-family: "Font Awesome 6 Free";
   font-weight: 700;
   font-size: 13px;
+}
+.table-web-development{
+  @media (max-width:1200px) {
+    overflow-x: auto;
+  }
 }
