--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1562,6 +1562,18 @@ section {
 .socialColumn ul li a:hover {
   color: #fff;
 }
+.social-link ul li a {
+  color: #333;
+  display: inline-block;
+  padding: 5px;
+  font-size: 22px;
+}
+.social-link ul{
+  gap: 20px;
+}
+.social-link ul li a:hover {
+  color: #aaa;
+}
 .footerRightBottom p {
   color: #aaa;
   font-size: 14px;
@@ -8478,7 +8490,7 @@ background-color: #000 !important;
 }
 
 .customFaq{
-  padding: 20px 0;
+  padding: 18px 0;
   border-bottom: 1px solid #d6d6d6;
 }
 
@@ -8494,7 +8506,7 @@ font-weight: 600;
 }
 .customFaq h4 span{
 
- font-size: 28px;
+ font-size: 20px;
 }
 .answer-row-0{ 
   grid-template-rows:0fr ;
