--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1281,6 +1281,18 @@
 	.audit_contact a {
 	  width: 100%;
 	}
+	.l_benifits_grid{
+		display: grid;
+		grid-template-columns: repeat(2,minmax(0,1fr));
+		gap:2px; 
+	  }
+	
+	  .l_why_grid{
+		display: grid;
+		grid-template-columns: repeat(2,minmax(0,1fr));
+		gap:2px;
+	   
+	  }
   }
   
   /* For devices with a min-width of 767px */
