--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1286,12 +1286,22 @@
 		grid-template-columns: repeat(2,minmax(0,1fr));
 		gap:2px; 
 	  }
+	.gd_benifits_grid{
+		display: grid;
+		grid-template-columns: repeat(2,minmax(0,1fr));
+		gap:2px; 
+	  }
 	
 	  .l_why_grid{
 		display: grid;
 		grid-template-columns: repeat(2,minmax(0,1fr));
 		gap:2px;
 	   
+	  }
+	  .gd_why_grid{
+		display: grid;
+		grid-template-columns: repeat(1,minmax(0,1fr));
+		gap:2px;
 	  }
   }
   
