--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,9 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); */
 /* @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap");
+
 /* @font-face {
   font-family: "Graphik";
   src: url("../fonts/GraphikBlack.otf") format("opentype");
@@ -142,6 +145,9 @@ section {
 
 .large_heading {
   font-size: 39px;
+}
+.large_heading2 {
+  font-size: 55px;
 }
 
 .heading {
@@ -9836,17 +9842,15 @@ font-size: 20px;
   list-style-type: square !important;
   color: #fff;
 }
-.list_local_seo_icon{
+.list_local_seo_icon {
   display: flex;
-
 }
 
-.list_local_seo_icon img{
+.list_local_seo_icon img {
   min-width: 40px;
   object-fit: contain;
-
 }
-.list_local_seo_icon span{
+.list_local_seo_icon span {
   display: inline-block;
   width: calc(100% - 50px);
 }
@@ -10007,8 +10011,8 @@ font-size: 20px;
   opacity: 1;
 }
 
-.logo-item{
-  padding: 20px ;
+.logo-item {
+  padding: 20px;
   border-top: 5px solid var(--light-blue-color);
   border-radius: 10px;
   display: flex;
@@ -10016,48 +10020,243 @@ font-size: 20px;
   align-items: center;
 }
 
-.l_benifits_grid{
+.l_benifits_grid {
   display: grid;
-  grid-template-columns: repeat(4,minmax(0,1fr));
-  gap:2px;
- 
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 2px;
 }
-.l_benifits_grid .item p{
-font-size: 14px;
-font-weight: 600;
-/* color: var(--light-blue-color); */
+.l_benifits_grid .item p {
+  font-size: 14px;
+  font-weight: 600;
+  /* color: var(--light-blue-color); */
 }
-.l_why_grid{
+.l_why_grid {
   display: grid;
-  grid-template-columns: repeat(3,minmax(0,1fr));
-  gap:2px;
- 
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2px;
 }
-.l_why_grid .item p{
-font-size: 14px;
-font-weight: 600;
-/* color: var(--light-blue-color); */
+.l_why_grid .item p {
+  font-size: 14px;
+  font-weight: 600;
+  /* color: var(--light-blue-color); */
 }
-.gd_benifits_grid
-{
+.gd_benifits_grid {
   display: grid;
-  grid-template-columns: repeat(4,minmax(0,1fr));
-  gap:2px;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 2px;
 }
 
-.gd_benifits_grid .discription{
+.gd_benifits_grid .discription {
   font-size: 14px;
 }
 
-.gd_benifits_grid .item{
+.gd_benifits_grid .item {
   background: #fff;
 }
 
-.gd_why_grid{
+.gd_why_grid {
   display: grid;
-  grid-template-columns: repeat(3,minmax(0,1fr));
-  gap:2px;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2px;
 }
-.l_seo_cta_para{
+.l_seo_cta_para {
   text-align: justify;
+}
+
+/* new */
+
+/* banner button */
+.fancy {
+  background-color: transparent;
+  border: 2px solid #e8e8e8;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  /* float: right; */
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1.25em 2em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
+}
+
+.fancy::before {
+  content: " ";
+  width: 1.5625rem;
+  height: 2px;
+  background: #fff;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
+}
+
+.fancy .text {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+}
+
+.fancy .top-key {
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background: #000;
+  transition: width 0.5s ease-out, left 0.3s ease-out;
+}
+
+.fancy .bottom-key-1 {
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: #000;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy .bottom-key-2 {
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background: #000;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy:hover {
+  color: white;
+  background: #fff;
+}
+
+.fancy:hover::before {
+  width: 0.9375rem;
+  background: #000;
+}
+
+.fancy:hover .text {
+  color: black;
+  padding-left: 1.5em;
+}
+
+.fancy:hover .top-key {
+  left: -2px;
+  width: 0px;
+}
+
+.fancy:hover .bottom-key-1,
+.fancy:hover .bottom-key-2 {
+  right: 0;
+  width: 0;
+}
+/* banner button */
+
+.fontHeading2 {
+  font-family: "Syne", Sans-serif;
+}
+.banner_swiper_main {
+  background-color: #000;
+}
+.banner-slide {
+  min-height: 100vh;
+  position: relative;
+}
+.banner-slide::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #000000;
+  z-index: -1;
+}
+.banner-slide.slide-1 {
+  background-image: url(../images/banner/banner-slide-1.jpg);
+  background-color: #33333370;
+  background-blend-mode: multiply;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.banner-slide.slide-2 {
+  background-image: url(../images/banner/banner-slide-23.jpg);
+  background-color: #33333370;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.banner-slide .inner_slide {
+  height: 90vh;
+
+  display: flex;
+  align-items: center;
+}
+
+.banner-slide .banner-heading {
+  font-size: 76px;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+}
+.banner-slide .banner-heading span {
+  color: var(--light-blue-color);
+}
+.banner-slide .banner_dis {
+  color: #fff;
+  /* font-size: 20px; */
+}
+
+/* trusted */
+.trusted{
+  position: relative;
+  /* background-color: #33333315; */
+  /* background-image: url(../images/abstract-gray-wave-background-textured-white-background-vector.jpg); */
+  background-size: cover;
+  border-bottom-right-radius: 150px;
+  z-index: 2;
+
+}
+.trusted::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url(../images/abstract-gray-wave-background-textured-white-background-vector.jpg);
+  background-size: cover;
+  z-index: -1;
+  opacity: .5;
+
+}
+
+.exp_count{
+  font-size: 105px;
+ 
+}
+.power_sib{
+  color:#d5cfcf;
 }
