--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,7 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap"); */
+
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 /* @font-face {
   font-family: "Graphik";
   src: url("../fonts/GraphikBlack.otf") format("opentype");
@@ -10173,7 +10171,8 @@ font-size: 20px;
 /* banner button */
 
 .fontHeading2 {
-  font-family: "Syne", Sans-serif;
+  /* font-family: "Syne", Sans-serif; */
+  font-family: "Montserrat", sans-serif;
 }
 .banner_swiper_main {
   background-color: #000;
