--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10168,6 +10168,110 @@ font-size: 20px;
   right: 0;
   width: 0;
 }
+.fancy2 {
+  background-color: transparent;
+  border: 2px solid #e8e8e8;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  /* float: right; */
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1.25em 2em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
+}
+
+.fancy2::before {
+  content: " ";
+  width: 1.5625rem;
+  height: 2px;
+  background: #fff;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
+}
+
+.fancy2 .text {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+}
+
+.fancy2 .top-key {
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background:var(--light-blue-color);
+  transition: width 0.5s ease-out, left 0.3s ease-out;
+}
+
+.fancy2 .bottom-key-1 {
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: var(--light-blue-color);
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy2 .bottom-key-2 {
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background:var(--light-blue-color);
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy2:hover {
+  color: white;
+  background: #fff;
+}
+
+.fancy2:hover::before {
+  width: 0.9375rem;
+  background: #000;
+}
+
+.fancy2:hover .text {
+  color: black;
+  padding-left: 1.5em;
+}
+
+.fancy2:hover .top-key {
+  left: -2px;
+  width: 0px;
+}
+
+.fancy2:hover .bottom-key-1,
+.fancy2:hover .bottom-key-2 {
+  right: 0;
+  width: 0;
+}
 /* banner button */
 
 .fontHeading2 {
@@ -10202,7 +10306,7 @@ font-size: 20px;
 }
 .banner-slide.slide-2 {
   background-image: url(../images/banner/banner-slide-23.jpg);
-  background-color: #33333370;
+  background-color: #333333db;
   background-position: center;
   background-blend-mode: multiply;
   background-repeat: no-repeat;
@@ -10259,4 +10363,74 @@ font-size: 20px;
 }
 .power_sib{
   color:#d5cfcf;
+}
+
+.banner_ul_growth{
+  display: grid;
+  grid-template-columns: repeat(2,minmax(0,1fr));
+  grid-row-gap: 20px;
+}
+.banner_ul_growth li{
+  margin-bottom: 10px;
+  color: #fff;
+ display: flex ;
+ align-items: center;
+ font-family: "Inter", sans-serif;
+ gap: 20px;
+ font-size: 24px;
+ font-weight: 700;
+}
+/* what we do */
+.services-title {
+  position: relative;
+  padding-left: 30px;
+}
+.services-title::after {
+  position: absolute;
+  content: "";
+  top: 16px;
+  left: -30px;
+  width: 25px;
+  height: 25px;
+  border: 2px dashed #333;
+  border-radius: 100%;
+}
+.services-title::before {
+  position: absolute;
+  content: "";
+  top: 21px;
+  left: -25px;
+  width: 15px;
+  height: 15px;
+  /* border: 2px solid red; */
+  background-color: var(--light-blue-color);
+  border-radius: 100%;
+
+}
+
+.what_we_do_img{
+  position: sticky;
+  top: 100px;
+  height: 550px;
+  display: flex ;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.counterGrid{
+  display: grid;
+  grid-template-columns: repeat(2,minmax(0,1fr));
+  gap: 30px;
+}
+.bg-dark-blue {
+  background-color: #176cc1;
+}
+.home_counterGrid_item{
+  border-left:5px solid #fff ;
+  padding-left: 20px;
+}
+.home_counterGrid_item p{
+  color: #fff;
+  font-weight: 500;
 }
